--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
+    "ts-node": "^10.9.1",
+    "@types/node": "^18.11.18",
+    "tslib": "^2.5.0",
+    "typescript": "^4.8.4",
     "webpack": "^4.34.0"
   }
 }
