--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.28",
     "babel-loader": "^8.0.6",
     "ts-node": "^10.9.1",
-    "@types/node": "^18.11.18",
     "tslib": "^2.5.0",
     "typescript": "^4.8.4",
     "webpack": "^4.34.0"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "redux": "^4.2.1"
   }
 }
